<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1891D4"
    tools:context=".Credito">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="275dp"
        android:layout_height="194dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/credito"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/abhaya_libre_extrabold"
        android:text="@string/seleccione_la_opcion_deseada"
        android:textColor="#212121"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/btnPagar"
        android:layout_width="148dp"
        android:layout_height="79dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/material_dynamic_neutral80"
        android:fontFamily="@font/abhaya_libre_extrabold"
        android:text="@string/pagar3"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnBloquearCredito"
        android:layout_width="148dp"
        android:layout_height="79dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/material_dynamic_neutral80"
        android:fontFamily="@font/abhaya_libre_extrabold"
        android:text="@string/bloquear3"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnDetalleCredito"
        android:layout_width="138dp"
        android:layout_height="71dp"
        android:backgroundTint="#1891D4"
        android:text="@string/ver_detalle3"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.753" />
</androidx.constraintlayout.widget.ConstraintLayout>