<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1891D4"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="183dp"
        android:layout_height="106dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="361dp"
        android:layout_height="42dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/abhaya_libre_extrabold"
        android:text="@string/seleccione_la_tarjeta_deseada"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/btnDebito"
        android:layout_width="275dp"
        android:layout_height="193dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/todo11"
        android:onClick="TarjetaDebito"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/debito"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/btnCredito"
        android:layout_width="271dp"
        android:layout_height="212dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/todo8"
        android:onClick="TarjetaCredito"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDebito"
        app:srcCompat="@drawable/credito"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>